--- a/app/lending/(1-concepts)/utilisation/page.mdx
+++ b/app/lending/(1-concepts)/utilisation/page.mdx
@@ -9,6 +9,7 @@ description: How utilisation and interest rates work in Chainflip Lending
 
 Chainflip Lending uses a utilisation curve model to determine real-time borrowing and lending rates. Utilisation represents how much of a pool’s liquidity is currently borrowed:
 
+<div style={{ textAlign: "left" }}>
 ```math
 \text{Utilisation} = \frac{\text{Borrowed Amount}}{\text{Total Supplied}}
 
