--- a/app/lending/(1-concepts)/collateralisation/page.mdx
+++ b/app/lending/(1-concepts)/collateralisation/page.mdx
@@ -14,6 +14,7 @@ Collateral values are sourced from Chainlink feeds witnessed by the validator ne
 <div style={{ textAlign: "left" }}>
 ```math
 \text{LTV} = \frac{\text{Loan Value}}{\text{Collateral Value}}
+</div>
 
 A minimum collateralisation level (maximum LTV) is required when creating a loan. Borrowers can freely add more collateral at any time. If a user maintains an excessively low LTV (high overcollateralisation), a gradually increasing Low LTV Penalty is applied. This discourages locking up unnecessary collateral that reduces system-wide economic security.
 
