--- a/app/lending/(1-concepts)/collateralisation/page.mdx
+++ b/app/lending/(1-concepts)/collateralisation/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Collateralisation & Liquidations
+title: Collateral & Liquidations
 description: How LTV, collateralisation, and liquidations work in Chainflip Lending
 ---
 
@@ -88,6 +88,6 @@ The maximum expected liquidation loss for borrowers is approximately **5% of the
 
 ### Insufficient Collateral and Socialised Losses
 
-If collateral cannot fully cover the loan after liquidation — an extremely rare scenario — losses are socialised among lenders of **that specific asset only**. Other assets and markets remain unaffected.
+If collateral cannot fully cover the loan after liquidation, an extremely rare scenario, losses are socialised among lenders of **that specific asset only**. Other assets and markets remain unaffected.
 
 Historical behaviour across major liquidation events (e.g., Oct 10th 2025) suggests the Chainflip DEX can process such scenarios with minimal systemic impact.
