--- a/app/lending/(1-concepts)/fees/page.mdx
+++ b/app/lending/(1-concepts)/fees/page.mdx
@@ -57,7 +57,7 @@ Interest is accrued in the borrowed asset and paid to lenders in that same asset
 
 The network charges a flat **1% APR** fee on borrowed positions.
 
-This does not affect supplier returns directly — it is simply added on top of the supply-side interest rate to determine the final borrow rate.
+This does not affect supplier returns directly, it is simply added on top of the supply-side interest rate to determine the final borrow rate.
 
 All network fees are periodically swapped into FLIP via the buy-and-burn system.
 
