--- a/app/lending/(1-concepts)/utilisation/page.mdx
+++ b/app/lending/(1-concepts)/utilisation/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Utilisation & Interest Rates
+title: Utilisation & Rates
 description: How utilisation and interest rates work in Chainflip Lending
 ---
 
