--- a/app/lending/(3-techincal-docs)/markets/page.mdx
+++ b/app/lending/(3-techincal-docs)/markets/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Markets, Parameters & Risk
+title: Markets & Risk Parameters
 description: Market isolation, parameter configuration, and risk considerations in Chainflip Lending
 ---
 
