--- a/app/lending/(3-techincal-docs)/oracles/page.mdx
+++ b/app/lending/(3-techincal-docs)/oracles/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Oracles, Security & Custody
+title: Oracles & Custody
 description: How Chainflip Lending uses oracle pricing, vault custody, and State Chain execution for safety and reliability
 ---
 
@@ -57,7 +57,7 @@ For more background, see **Protocol Overview → Vaults & Security**.
 
 ### State Chain Execution Environment
 
-All lending operations — loan creation, collateral updates, repayments, interest accrual, and liquidation scheduling — are executed on the Chainflip State Chain, a custom Rust-based chain designed for:
+All lending operations: loan creation, collateral updates, repayments, interest accrual, and liquidation scheduling, are executed on the Chainflip State Chain, a custom Rust-based chain designed for:
 
 - deterministic execution  
 - fast block times  
@@ -76,7 +76,7 @@ Because the State Chain powers both the DEX and Lending:
 
 ### Operational History & Audits
 
-Chainflip’s cross-chain infrastructure has processed **$3.7B+ in cumulative swap volume** since late 2023 with:
+Chainflip’s cross-chain infrastructure has processed **$5.1B+ in cumulative swap volume** since late 2023 with:
 
 - multiple external audits  
 - zero major security incidents  
