--- a/app/lending/(3-techincal-docs)/economic/page.mdx
+++ b/app/lending/(3-techincal-docs)/economic/page.mdx
@@ -1,5 +1,5 @@
 ---
-title: Economic Security & Governance
+title: Security & Governance
 description: How lending fits into Chainflip’s existing security and governance model
 ---
 
