fix: improve titles.

--- a/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
+++ b/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
@@ -2,16 +2,16 @@
 
 title: Node RPCs and Subscriptions
 
-description: All the node's exposed RPCs and subscriptions useful for tracing funds
+description: The node's exposed RPCs and subscriptions.
 
 ---
 
 import { Cards, Callout } from 'nextra/components'
 
 
-## Node RPCs useful for tracing funds through Chainflip
+## Node RPCs
 
-Here are the RPCs and subscriptions that are useful for anyone interested in tracing funds in the network.
+Here are the RPCs and subscriptions that are available on the node. See also [LP-specific node rpcs](/lp/lp-api/lp-node-rpcs).
 
 <Callout type="info">
     The following RPCs are only available on `chainflip-node`
