--- a/app/protocol/(3-technical-docs)/node-rpcs/requests/page.mdx
+++ b/app/protocol/(3-technical-docs)/node-rpcs/requests/page.mdx
@@ -2,7 +2,7 @@
 
 title: Node RPC Requests
 
-description: The state chain node RPCs that are useful for tracing funds.
+description: The state chain node RPCs.
 
 ---
 
@@ -65,8 +65,6 @@ Response:
   "id": "1"
 }
 ```
-
-## RPC requests
 
 ### `cf_controlled_vault_addresses`
 
