chore: more title fixes.

--- a/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
+++ b/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
@@ -1,6 +1,6 @@
 ---
 
-title: Node RPCs and Subscriptions
+title: Node RPCs
 
 description: The node's exposed RPCs and subscriptions.
 
@@ -11,7 +11,7 @@ import { Cards, Callout } from 'nextra/components'
 
 ## Node RPCs
 
-Here are the RPCs and subscriptions that are available on the node. See also [LP-specific node rpcs](/lp/lp-api/lp-node-rpcs).
+Here are the RPCs and subscriptions that are available on the node. See also [LP-specific node rpcs](/lp/lp-api).
 
 <Callout type="info">
     The following RPCs are only available on `chainflip-node`
