chore: update text.

--- a/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
+++ b/app/protocol/(3-technical-docs)/node-rpcs/page.mdx
@@ -11,7 +11,7 @@ import { Cards, Callout } from 'nextra/components'
 
 ## Node RPCs
 
-Here are the RPCs and subscriptions that are available on the node. See also [LP-specific node rpcs](/lp/lp-api).
+Here are the RPCs and subscriptions that are available on the node. Not all RPCs have been added to the documentation yet. See also [LP-specific node rpcs](/lp/lp-node-rpcs).
 
 <Callout type="info">
     The following RPCs are only available on `chainflip-node`
