--- a/app/lending/(3-techincal-docs)/oracles/page.mdx
+++ b/app/lending/(3-techincal-docs)/oracles/page.mdx
@@ -26,7 +26,7 @@ To protect borrowers and lenders:
 
 - Loan creation halts if oracle prices become stale  
 - Liquidations halt if oracle feeds stop updating  
-- Borrowers may still repay, add collateral, or close positions during these pauses  
+- Borrowers may still repay or add collateral during these pauses
 
 Normal operation automatically resumes once the oracle becomes healthy again.
 
