--- a/app/lending/(3-techincal-docs)/pricing/page.mdx
+++ b/app/lending/(3-techincal-docs)/pricing/page.mdx
@@ -73,7 +73,7 @@ During high-stress periods:
 
 - Quotes remain available
 - Refund logic in the DEX behaves normally
-- LP bots (including internal tools like Speer) continue operating
+- LP bots continue operating
 - Liquidation and non-liquidation flow are matched simultaneously
 - Competing LPs naturally rebalance inventories via external venues
 
