--- a/app/lending/(3-techincal-docs)/markets/page.mdx
+++ b/app/lending/(3-techincal-docs)/markets/page.mdx
@@ -25,7 +25,6 @@ Every lending market defines a set of core parameters that determine:
 
 - minimum collateralisation requirements
 - soft and hard liquidation thresholds
-- reserves
 - interest rate behaviour
 
 These parameters are calibrated per asset, according to liquidity depth, volatility, and suitability as collateral.
@@ -60,7 +59,7 @@ These thresholds may change as the system matures and liquidity grows.
 To keep the system efficient and avoid excessive “micro-transactions”, a few minimum amounts apply:
 
 - **Minimum Supply Amount:** $100
-- **Minimum Loan Amount:** $100
+- **Minimum Loan Creation Amount:** $100
 - **Minimum Loan Update Amount:** $10
 - **Minimum Collateral Add/Remove:** $10
 
@@ -74,13 +73,13 @@ Liquidation orders follow defined size and slippage limits to ensure predictable
 
 #### Soft Liquidation
 
-- **Order size:** $10,000
+- **Swap Chunk size:** $10,000
 - **Slippage limit:** 0.5% below oracle price
 - **Submitted:** once per block
 
 #### Hard Liquidation
 
-- **Order size:** $50,000
+- **Swap Chunk size:** $50,000
 - **Slippage limit:** 5% below oracle price
 - **Submitted:** once per block
 
@@ -105,7 +104,6 @@ Additional assets may be added progressively as liquidity improves and risk para
 Chainflip Lending is designed to minimise systemic risk through:
 
 - Isolated markets
-- Isolated loan positions
 - Oracle-driven collateral valuations
 - Early, gradual liquidations (rather than all or nothing)
 - Integrated DEX execution, reducing dependency on external liquidators
@@ -113,8 +111,8 @@ Chainflip Lending is designed to minimise systemic risk through:
 
 However, lenders may be exposed to:
 
-- socialised losses in rare scenarios where collateral is insufficient
+- socialised losses in rare scenarios where collateral is insufficient in an attempt to fully liquidate a loan
 - periods of high utilisation, causing higher borrow rates
 - oracle outages, temporarily pausing liquidations and new loan creation
 
-Overall, risk is tightly scoped to each asset pool, making the system predictable and transparent.
+Overall, risk is tightly scoped to each asset pool and side, making the system predictable and transparent.
