Fix: remove incorrect statement about liquidation order flagging

--- a/app/lending/(3-techincal-docs)/pricing/page.mdx
+++ b/app/lending/(3-techincal-docs)/pricing/page.mdx
@@ -27,7 +27,7 @@ The matching engine treats liquidation orders similarly to internal DCA-style sw
 - If not filled, a new order is submitted at updated oracle prices and LPP bounds
 - LPs may fill partial or full amounts based on their quoting strategy
 
-Liquidation orders are flagged internally but remain permissionless, any LP can fill them.
+Liquidation orders remain fully permissionless, any LP can fill them.
 
 The system prioritises:
 
